--- a/src/mixins/_input.scss
+++ b/src/mixins/_input.scss
@@ -30,12 +30,15 @@
   }
 }
 
-$input-border-width: 0.125rem; // 2px
+$-border-states: (
+  'normal': 'dark',
+  'error': 'red',
+);
 
-@mixin input-border($radius: 4px) {
-  @include color.border-color('dark');
+@mixin input-border($radius: 0.125rem, $width: 0.0625rem, $state: 'normal') {
+  @include color.border-color(map-get($map: $-border-states, $key: $state));
 
-  border-width: $input-border-width; // 2px
+  border-width: $width;
   border-style: solid;
   border-radius: $radius;
 
@@ -57,17 +60,25 @@ $input-border-width: 0.125rem; // 2px
 $input-line-height: 1.125rem;
 
 @mixin input-text {
+  $vert: 'sm';
+  $horiz: 'base';
+
   @include type.font-size('body');
   @include type.font-family('normal');
-  @include layout.padding-horiz('base');
-  @include layout.padding-vert('sm');
+  @include layout.padding-horiz($horiz);
+  @include layout.padding-vert($vert);
 
-  height: $input-line-height + (2 * layout.spacing('sm')) +
-    (2 * $input-border-width);
+  height: $input-line-height + (2 * layout.spacing($vert)) + 0.125rem;
   appearance: none;
   -webkit-appearance: none;
   line-height: $input-line-height;
   color: inherit;
+}
+
+@mixin message {
+  @include type.font-size('sm');
+  @include type.font-family('normal');
+  @include layout.margin-top('sm');
 }
 
 @mixin textbox {
@@ -119,7 +130,7 @@ $check-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' v
 @mixin check {
   @include layout.margin('none');
   @include layout.padding('none');
-  @include input-border;
+  @include input-border($radius: 0.25rem);
   @include checkable($check-icon);
 
   width: 1.25rem; // 20px
